// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedTypeFilter snapshots matches snapshot with "Proposicion" selected 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "paddingHorizontal": 16,
      "paddingVertical": 10,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(255, 122, 110, 0)",
          "borderColor": "rgba(92, 108, 250, 1)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "borderWidth": 1,
          "height": 34,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
      ]
    }
    nativeID="66"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "borderWidth": 1,
          "height": 34,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
        {
          "backgroundColor": "rgba(255, 122, 110, 0)",
          "borderColor": "rgba(92, 108, 250, 1)",
        },
      ]
    }
  >
    <Text
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "color": "rgba(92, 108, 250, 1)",
          },
        }
      }
      jestInlineStyle={
        [
          {
            "fontSize": 12,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 14,
          },
        ]
      }
      nativeID="67"
      style={
        [
          {
            "fontSize": 12,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 14,
          },
          {
            "color": "rgba(92, 108, 250, 1)",
          },
        ]
      }
    >
      Todos
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(255, 122, 110, 0)",
          "borderColor": "rgba(92, 108, 250, 1)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "borderWidth": 1,
          "height": 34,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
      ]
    }
    nativeID="68"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "borderWidth": 1,
          "height": 34,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
        {
          "backgroundColor": "rgba(255, 122, 110, 0)",
          "borderColor": "rgba(92, 108, 250, 1)",
        },
      ]
    }
  >
    <Text
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "color": "rgba(92, 108, 250, 1)",
          },
        }
      }
      jestInlineStyle={
        [
          {
            "fontSize": 12,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 14,
          },
        ]
      }
      nativeID="69"
      style={
        [
          {
            "fontSize": 12,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 14,
          },
          {
            "color": "rgba(92, 108, 250, 1)",
          },
        ]
      }
    >
      Proyectos
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(255, 122, 110, 1)",
          "borderColor": "rgba(255, 122, 110, 1)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "borderWidth": 1,
          "height": 34,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
      ]
    }
    nativeID="70"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "borderWidth": 1,
          "height": 34,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
        {
          "backgroundColor": "rgba(255, 122, 110, 1)",
          "borderColor": "rgba(255, 122, 110, 1)",
        },
      ]
    }
  >
    <Text
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "color": "rgba(255, 255, 255, 1)",
          },
        }
      }
      jestInlineStyle={
        [
          {
            "fontSize": 12,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 14,
          },
        ]
      }
      nativeID="71"
      style={
        [
          {
            "fontSize": 12,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 14,
          },
          {
            "color": "rgba(255, 255, 255, 1)",
          },
        ]
      }
    >
      Proposiciones
    </Text>
  </View>
</View>
`;

exports[`FeedTypeFilter snapshots matches snapshot with "Proyecto" selected 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "paddingHorizontal": 16,
      "paddingVertical": 10,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(255, 122, 110, 0)",
          "borderColor": "rgba(92, 108, 250, 1)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "borderWidth": 1,
          "height": 34,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
      ]
    }
    nativeID="60"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "borderWidth": 1,
          "height": 34,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
        {
          "backgroundColor": "rgba(255, 122, 110, 0)",
          "borderColor": "rgba(92, 108, 250, 1)",
        },
      ]
    }
  >
    <Text
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "color": "rgba(92, 108, 250, 1)",
          },
        }
      }
      jestInlineStyle={
        [
          {
            "fontSize": 12,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 14,
          },
        ]
      }
      nativeID="61"
      style={
        [
          {
            "fontSize": 12,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 14,
          },
          {
            "color": "rgba(92, 108, 250, 1)",
          },
        ]
      }
    >
      Todos
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(255, 122, 110, 1)",
          "borderColor": "rgba(255, 122, 110, 1)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "borderWidth": 1,
          "height": 34,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
      ]
    }
    nativeID="62"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "borderWidth": 1,
          "height": 34,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
        {
          "backgroundColor": "rgba(255, 122, 110, 1)",
          "borderColor": "rgba(255, 122, 110, 1)",
        },
      ]
    }
  >
    <Text
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "color": "rgba(255, 255, 255, 1)",
          },
        }
      }
      jestInlineStyle={
        [
          {
            "fontSize": 12,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 14,
          },
        ]
      }
      nativeID="63"
      style={
        [
          {
            "fontSize": 12,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 14,
          },
          {
            "color": "rgba(255, 255, 255, 1)",
          },
        ]
      }
    >
      Proyectos
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(255, 122, 110, 0)",
          "borderColor": "rgba(92, 108, 250, 1)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "borderWidth": 1,
          "height": 34,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
      ]
    }
    nativeID="64"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "borderWidth": 1,
          "height": 34,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
        {
          "backgroundColor": "rgba(255, 122, 110, 0)",
          "borderColor": "rgba(92, 108, 250, 1)",
        },
      ]
    }
  >
    <Text
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "color": "rgba(92, 108, 250, 1)",
          },
        }
      }
      jestInlineStyle={
        [
          {
            "fontSize": 12,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 14,
          },
        ]
      }
      nativeID="65"
      style={
        [
          {
            "fontSize": 12,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 14,
          },
          {
            "color": "rgba(92, 108, 250, 1)",
          },
        ]
      }
    >
      Proposiciones
    </Text>
  </View>
</View>
`;

exports[`FeedTypeFilter snapshots matches snapshot with no selection 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 8,
      "paddingHorizontal": 16,
      "paddingVertical": 10,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(255, 122, 110, 1)",
          "borderColor": "rgba(255, 122, 110, 1)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "borderWidth": 1,
          "height": 34,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
      ]
    }
    nativeID="54"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "borderWidth": 1,
          "height": 34,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
        {
          "backgroundColor": "rgba(255, 122, 110, 1)",
          "borderColor": "rgba(255, 122, 110, 1)",
        },
      ]
    }
  >
    <Text
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "color": "rgba(255, 255, 255, 1)",
          },
        }
      }
      jestInlineStyle={
        [
          {
            "fontSize": 12,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 14,
          },
        ]
      }
      nativeID="55"
      style={
        [
          {
            "fontSize": 12,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 14,
          },
          {
            "color": "rgba(255, 255, 255, 1)",
          },
        ]
      }
    >
      Todos
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(255, 122, 110, 0)",
          "borderColor": "rgba(92, 108, 250, 1)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "borderWidth": 1,
          "height": 34,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
      ]
    }
    nativeID="56"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "borderWidth": 1,
          "height": 34,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
        {
          "backgroundColor": "rgba(255, 122, 110, 0)",
          "borderColor": "rgba(92, 108, 250, 1)",
        },
      ]
    }
  >
    <Text
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "color": "rgba(92, 108, 250, 1)",
          },
        }
      }
      jestInlineStyle={
        [
          {
            "fontSize": 12,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 14,
          },
        ]
      }
      nativeID="57"
      style={
        [
          {
            "fontSize": 12,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 14,
          },
          {
            "color": "rgba(92, 108, 250, 1)",
          },
        ]
      }
    >
      Proyectos
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(255, 122, 110, 0)",
          "borderColor": "rgba(92, 108, 250, 1)",
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "borderWidth": 1,
          "height": 34,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
      ]
    }
    nativeID="58"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 999,
          "borderWidth": 1,
          "height": 34,
          "justifyContent": "center",
          "paddingHorizontal": 16,
        },
        {
          "backgroundColor": "rgba(255, 122, 110, 0)",
          "borderColor": "rgba(92, 108, 250, 1)",
        },
      ]
    }
  >
    <Text
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "color": "rgba(92, 108, 250, 1)",
          },
        }
      }
      jestInlineStyle={
        [
          {
            "fontSize": 12,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 14,
          },
        ]
      }
      nativeID="59"
      style={
        [
          {
            "fontSize": 12,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 14,
          },
          {
            "color": "rgba(92, 108, 250, 1)",
          },
        ]
      }
    >
      Proposiciones
    </Text>
  </View>
</View>
`;
